introduction to css exercise

--- a/HTML and CSS Mini course/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
+++ b/HTML and CSS Mini course/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -71,7 +71,7 @@
             <article>
                 <h2>SAVVY. CREATIVE. DETERMINED.</h2>
                 <p>
-                    I'm a freelance web developer vased in Santa Monica, California. I've been in business since 2006 amd work mainly with design agencies.
+                    I'm a freelance web developer based in Santa Monica, California. I've been in business since 2006 amd work mainly with design agencies.
                 </p>
                 <p>
                     While I specialize in front-end development and WordPress, I now also do a lot of work in mobile web and responsive development.
